; ModuleID = '/home/carl/AnghaBench/radare2/shlr/java/extr_dsojson.c_dso_json_dict_entry_value_set_str.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/java/extr_dsojson.c_dso_json_dict_entry_value_set_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dso_json_dict_entry_value_set_str(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %5, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @dso_json_is_dict_entry(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = call i32* @dso_json_str_new_from_str(i8* %11)
  store i32* %12, i32** %6, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @dso_json_dict_entry_value_set_obj(i32* %13, i32* %14)
  store i32 %15, i32* %5, align 4
  br label %16

16:                                               ; preds = %10, %2
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i64 @dso_json_is_dict_entry(i32*) #1

declare dso_local i32* @dso_json_str_new_from_str(i8*) #1

declare dso_local i32 @dso_json_dict_entry_value_set_obj(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
